--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
 	<link href="css/styles.css" rel="stylesheet">
   <title>FGC Finder</title>
 </head>
@@ -11,19 +11,19 @@
 	<div class="sideNav" data-bind="slide: menuBool, minSlide: windowData">
 		<header class="box navHeader">
 			<p class="box navTitle">Locations</p>
-		</header> 
+		</header>
 		<input type="text" class="searchField" placeholder="Search for places here..." data-bind="textInput: filterTerm">
 		<div data-bind="foreach: locationsList.sort(function(left, right) { return left.title == right.title ? 0 : (left.title < right.title ? -1 : 1) })">
 			<div class="box locationItem" data-bind="click: openInfoWindow, event: {mouseover: highlightMarker, mouseout: normalizeMarker}, visible: visibleBool"><p class="locationText" data-bind="text: title"></p></div>
 		</div>
-	</div>	
+	</div>
 	<main data-bind="adjust350LeftMargin: menuBool, minMargin: windowData">
 		<header class="box mapHeader">
-			<div class="navIcon" data-bind="click: boolUpdate">&#9776;</div> 
-			<p class="title">FGC Community - California</p>
+			<div class="navIcon" data-bind="click: boolUpdate">&#9776;</div>
+			<p class="title">FGC Community</p>
 		</header>
-		<div id="map"></div> 
-	</main> 
+		<div id="map"></div>
+	</main>
   <script src="js/libs/knockout.js"></script>
   <script src="js/libs/jquery.min.js"></script>
 	<script src="js/locations.js"></script>
