Re-added California title

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<main data-bind="adjust350LeftMargin: menuBool, minMargin: windowData">
 		<header class="box mapHeader">
 			<div class="navIcon" data-bind="click: boolUpdate">&#9776;</div>
-			<p class="title">FGC Community</p>
+			<p class="title">FGC Community - California</p>
 		</header>
 		<div id="map"></div>
 	</main>
