Reduced width of sidebar

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 			<div class="box locationItem" data-bind="click: openInfoWindow, event: {mouseover: highlightMarker, mouseout: normalizeMarker}, visible: visibleBool"><p class="locationText" data-bind="text: title"></p></div>
 		</div>
 	</div>
-	<main data-bind="adjust350LeftMargin: menuBool, minMargin: windowData">
+	<main data-bind="adjustLeftMargin: menuBool, minMargin: windowData">
 		<header class="box mapHeader">
 			<div class="navIcon" data-bind="click: boolUpdate">&#9776;</div>
-			<p class="title">FGC Community - California</p>
+			<p class="title">FGC Finder</p>
 		</header>
 		<div id="map"></div>
 	</main>
